--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,3 +1,8 @@
+.pagination-container{
+    display: flex;
+    justify-content: center;
+}
+
 .pagination {
     display: flex;
     justify-content: space-between;
