--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dark-mode{
+  background-color:#000;
+  color: #fff;
+  min-height: 100vh;
+  overflow: hidden;
+}
