--- a/src/scss/components/_countrycard.scss
+++ b/src/scss/components/_countrycard.scss
@@ -8,8 +8,8 @@
   cursor: pointer;
   transition: all 0.3s;
 
-  &:hover{
-    transform:translateY(-2%);
+  &:hover {
+    transform: translateY(-2%);
   }
 
   &_image-container {
@@ -20,13 +20,15 @@
   }
   &_details {
     padding: 0 1.5rem 1.5rem 1.5rem;
-    p{
-        margin: 0.3rem 0;
+    p {
+      margin: 0.3rem 0;
     }
     &__title {
       font-weight: bold;
     }
   }
- 
 }
 
+.card-dark {
+  box-shadow: 1px 4px 30px rgba(255, 255, 255, 0.15);
+}
